fixed overflowing element

--- a/src/assets/scss/_projects.scss
+++ b/src/assets/scss/_projects.scss
@@ -18,7 +18,7 @@
     border: 1px solid $light;
 
     .project-text {
-      width: 30rem;
+      width: 100%;
       height: 4rem;
       display: flex;
       flex-direction: column;
